--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "homepage": "https://github.com/sadeghmohebbi/apidoc-plugin-swagger#readme",
   "dependencies": {
     "apidoc": "^0.29.0"
+  },
+  "devDependencies": {
+    "path-to-regexp": "^6.2.0"
   }
 }
