--- a/.gitignore
+++ b/.gitignore
@@ -147,7 +147,8 @@ dist
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -192,3 +193,5 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+test/simple/output/
+.vscode/
